# embedded-rust-workshop

./: README.md  rust-toolchain.toml  workshop.md
embedded-rust-workshop/: workshop.md
embedded-rust-workshop/practice/final/firmware/: Cargo.toml
embedded-rust-workshop/practice/final/firmware/src/: board.rs  main.rs  net.rs  xl.rs
embedded-rust-workshop/practice/session2/src/: main.rs
embedded-rust-workshop/slides/: session10.md  session2.md  session3.md  session4.md  session5.md  session7.md  session8.md
instructor/backend/: Cargo.toml
instructor/backend/src/: main.rs  renderer.rs
instructor/firmware/: Cargo.toml
instructor/firmware/src/: app.rs  board.rs  main.rs  net.rs  xl.rs
practice/: README.md
practice/.cheating/session10/: snippet.rs
practice/.cheating/session12/: snippet.rs
practice/.cheating/session13/: ethernet_init.rs  snippet.rs
practice/.cheating/session2/: i2c.rs
practice/.cheating/session3/: driver.rs
practice/.cheating/session4/: embassy_async_i2c.rs  main.rs
practice/.cheating/session5/: exti.rs
practice/.cheating/session6/: simple_executor.rs
practice/.cheating/session7/: exti_input_async.rs
practice/.cheating/session8/: embassy_tasks.rs
practice/.cheating/session9/: snippet.rs
practice/.snippets/session10/: interrupt_executor.rs
practice/.snippets/session2/: i2c.rs
practice/.snippets/session3/: driver.rs
practice/.snippets/session7/: exti_input_async.rs
practice/.snippets/session9/: channel_producer_consumer.rs
practice/final/backend/: Cargo.toml
practice/final/backend/src/: main.rs  renderer.rs  shader.wgsl
practice/final/firmware/: Cargo.toml
practice/final/firmware/src/: app.rs  board.rs  main.rs  net.rs  xl.rs
practice/libs/lowpass_filter/: Cargo.toml  Makefile  build.rs
practice/libs/lowpass_filter/include/: lowpass_filter.h
practice/libs/lowpass_filter/src/: lowpass_filter.c
practice/session10/: Cargo.toml  README.md
practice/session10/src/: main.rs
practice/session11/: Cargo.toml  README.md
practice/session11/session10/: Cargo.toml
practice/session11/src/: main.rs
practice/session12/: Cargo.toml  README.md  build.rs
practice/session12/src/: main.rs  mathlib.c  mathlib.h
practice/session13/: Cargo.toml  README.md
practice/session13/src/: main.rs
practice/session2/: Cargo.toml
practice/session3/: Cargo.toml  README.md
practice/session3/src/: i2c_impl.rs  main.rs  sensor.rs
practice/session4/: Cargo.toml
practice/session4/src/: main.rs
practice/session5/: Cargo.toml  README.md
practice/session5/src/: main.rs
practice/session6/: Cargo.toml  README.md
practice/session6/src/: executor.rs  main.rs  timer_future.rs
practice/session7/: README.md
practice/session7/src/: main.rs
practice/session8/: Cargo.toml  README.md
practice/session8/src/: main.rs
practice/session9/: Cargo.toml  README.md
practice/session9/src/: main.rs
practice/snippets/session11/: panic_handler.rs
practice/snippets/session13/: tcp_client.rs
practice/snippets/session2/: i2c_init.rs  i2c_pin_config.rs  lis3dh_read.rs  lis3dh_regs.rs
practice/snippets/session3/: i2c_hal_impl.rs  lis3dh_driver.rs
practice/snippets/session4/: embassy_i2c.rs
practice/snippets/session5/: exti.rs  exti_interrupt.rs  lis3dh_interrupt_config.rs
practice/snippets/session6/: simple_executor.rs
practice/snippets/session8/: exti_input_async.rs
practice/snippets/session9/: signal_example.rs
practice/workshop/: Cargo.toml  README.md  workshop.code-workspace
practice/workshop/src/: main.rs
slides/: session1.md  session10.md  session11.md  session12.md  session13.md  session2.md  session3.md  session4.md  session5.md  session6.md  session7.md  session8.md  session9.md
