[package]
name = "tcp-3d-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
wgpu = "22"
winit = "0.30"
cgmath = "0.18"
bytemuck = { version = "1.16", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
pollster = "0.3"
rand = "0.8"
glyphon = "0.6"

[[bin]]
name = "tcp-3d-viewer"
path = "src/main.rs"
