[package]
name = "session3"
version = "0.1.0"
edition = "2024"

[dependencies]
stm32-metapac = { version = "18", features = ["stm32h563zi"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# embedded-hal traits
embedded-hal = "1.0"
device-driver = "0.1"
