[package]
name = "workshop"
version = "0.1.0"
edition = "2024"
authors = ["Workshop Participant"]
license = "MIT OR Apache-2.0"

[dependencies]
# Session 2: Start with PAC and basic dependencies
stm32-metapac = { version = "18", features = ["stm32h563zi"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# Session 3: Add embedded-hal
# embedded-hal = "1.0"

# Session 4: Add Embassy (uncomment when ready)
# embassy-stm32 = { version = "0.4.0", features = ["defmt", "stm32h563zi", "memory-x", "time-driver-any", "exti", "unstable-pac"] }
# embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
# embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

# Session 5: Add critical-section for interrupts
# critical-section = "1.1"

# Session 8: Add embassy-sync
# embassy-sync = { version = "0.7.2", features = ["defmt"] }

# Session 9: Already have embassy-sync

# Session 10: Add executor-interrupt feature
# embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }

# Session 13: Add networking
# embassy-net = { version = "0.7.1", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet"] }
# embedded-io-async = "0.6.1"
# heapless = { version = "0.8", default-features = false }
# static_cell = "2"

# LIS3DH driver (add when using embedded-hal or embassy)
# lis3dh-async = { version = "0.9.3", features = ["defmt"] }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
