[package]
edition = "2024"
name = "workshop-firmware"
version = "0.1.0"
authors = [ "Ulf Lilleengen <ulf@digili.no>" ]
license = "MIT OR Apache-2.0"

[dependencies]
# Change stm32h563zi to your chip name, if necessary.
embassy-stm32 = { version = "0.4.0", features = ["defmt", "stm32h563zi", "memory-x", "time-driver-any", "exti", "unstable-pac", "low-power"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-net = { version = "0.7.1", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "proto-ipv6"] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embassy-futures = { version = "0.1.2" }
lis3dh-async = { version = "0.9.3", features = ["defmt"] }
device-driver = { version = "1.0", features = ["dsl"] }
#lis3dh = { version = "0.4.4" } #, features = ["defmt"] }
#accelerometer = "0.12.0"
assign-resources = "0.5"

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0"
embedded-hal-async = { version = "1.0" }
embedded-io-async = { version = "0.6.1" }
embedded-nal-async = "0.8.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
critical-section = "1.1"
micromath = "2.0.0"
stm32-fmc = "0.3.0"
embedded-storage = "0.3.1"
static_cell = "2"

lowpass_filter_sys = { path = "../libs/lowpass_filter" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

[patch.crates-io]
embassy-executor = {git = "https://github.com/embassy-rs/embassy.git", rev = "a66d9f6bea6b6e55ba3dfe0f3b86152402e47d3f"}
embassy-stm32 = {git = "https://github.com/embassy-rs/embassy.git", rev = "a66d9f6bea6b6e55ba3dfe0f3b86152402e47d3f"}
embassy-time = {git = "https://github.com/embassy-rs/embassy.git", rev = "a66d9f6bea6b6e55ba3dfe0f3b86152402e47d3f"}
embassy-net = {git = "https://github.com/embassy-rs/embassy.git", rev = "a66d9f6bea6b6e55ba3dfe0f3b86152402e47d3f"}
embassy-sync = {git = "https://github.com/embassy-rs/embassy.git", rev = "a66d9f6bea6b6e55ba3dfe0f3b86152402e47d3f"}
embassy-usb = {git = "https://github.com/embassy-rs/embassy.git", rev = "a66d9f6bea6b6e55ba3dfe0f3b86152402e47d3f"}

#embassy-executor = {path = "../../../embassy/embassy-executor"}
#embassy-stm32 = {path = "../../../embassy/embassy-stm32"}
#embassy-time = {path = "../../../embassy/embassy-time"}
#embassy-net = {path = "../../../embassy/embassy-net"}
#embassy-sync = {path = "../../../embassy/embassy-sync"}
#embassy-usb = {path = "../../../embassy/embassy-usb"}

lis3dh-async = { path = "../../../lis3dh-rs-async" }
